--- a/views/register.html
+++ b/views/register.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrarse</title>
     <link rel="stylesheet" href="../public/css/register.css">
+    <link rel="stylesheet" href="../public/fonts/font.css">
 </head>
 <body>
     <form action="" method="post">
         <h1>Formulario de registro</h1>
         <label for="nombre">Ingrese su nombre</label>
-        <input type="text" name="nombre" id="nombre">
+        <input type="text" name="nombre" id="nombre" placeholder="Rocio Belen">
         <label for="apellido">Ingrese su apellido</label>
-        <input type="text" name="apellido" id="apellido">
+        <input type="text" name="apellido" id="apellido" placeholder="Moreno Cerda">
         <label for="rut">Ingrese su rut</label>
-        <input type="number" name="rut" id="rut">
+        <input type="number" name="rut" id="rut" placeholder="11.111.111-1">
         <label for="correo">Ingrese su correo</label>
-        <input type="email" name="correo" id="correo">
+        <input type="email" name="correo" id="correo" placeholder="correo@correo@gmail.com">
         <label for="contra">Ingrese su contraseña</label>
         <input type="password" name="contra" id="contra">
         <label for="contra2">Confirme su contraseña</label>
