log-in y register front terminados, se creo un css general para los formularios

--- a/views/log-in.html
+++ b/views/log-in.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Iniciar sesión</title>
-    <link rel="stylesheet" href="../public/css/log-in.css" />
+    <link rel="stylesheet" href="../public/css/form.css" />
+    <link rel="stylesheet" href="../public/fonts/font.css" />
   </head>
   <body>
     <form class="form-content" action="">
-      <h1 class="titulo">Iniciar sesión</h1>
-      <div class="form-input">
-        <label for="user-correo" class="form-label">Ingrese su correo</label>
-        <input type="email" class="form-input" />
-        <label for="user-pass" class="form-label">Ingrese su contraseña</label>
-        <input type="password" class="form-input" />
+      <h1 class="titule">Iniciar sesión</h1>
+      <label for="user-correo" class="form-label">Ingrese su correo</label>
+      <input type="email" class="form-input" placeholder="correo@correo.cl" />
+      <label for="user-pass" class="form-label">Ingrese su contraseña</label>
+      <input type="password" class="form-input" placeholder="contraseña" />
+      <a href="#" class="log">Recuperar contraseña</a>
+      <a href="register.html" class="log">Crear cuenta</a>
+      <div class="div-button">
+        <button class="form-button">Iniciar sesión</button>
       </div>
-      <a href="#" class="links">Recuperar contraseña</a>
-      <a href="register.html" class="links">Crear cuenta</a>
-      <button class="form-button">Iniciar sesión</button>
     </form>
-  </body>
+  </body>b
 </html>
