--- a/views/register.html
+++ b/views/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrarse</title>
-    <link rel="stylesheet" href="../public/css/register.css">
+    <link rel="stylesheet" href="../public/css/form.css">
     <link rel="stylesheet" href="../public/fonts/font.css">
 </head>
 <body>
