--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
     <title>EventGo</title>
     <link rel="stylesheet" href="../public/css/index.css" />
     <link rel="stylesheet" href="../public/fonts/font.css" />
+    <link rel="stylesheet" href="../public/css/footer.css">
   </head>
   <body>
     <header>
@@ -21,5 +22,33 @@
         </ul>
       </div>
     </header>
+
+    <footer>
+      <div class="info"></div>
+      <div class="info">
+        <h3>Contacto</h3>
+        <ul>
+          <li>+56912345678</li>
+          <li>info@eventgo.cl</li>
+          <li>Beaucheff 938, santiago region metropolitana</li>
+        </ul>
+      </div>
+      <div class="info">
+        <h3>Redes sociales</h3>
+        <ul>
+          
+          <li><a href="https://instagram.com" class="links" target="_blank">Instagram</a></li>
+          <li><a href="https://facebook.com"  class="links" target="_blank">Facebook</a></li>
+          <li><a href="https://linkedin.com"  class="links" target="_blank">Linkedin</a></li>
+        </ul>
+      </div>
+      <div class="info">
+        <form action="">
+          <h3>Newsletter</h3>
+          <input type="text">
+          <button>Suscribirse</button>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
