Inicio del desarrollo de la seccion about us

--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EventGo</title>
-    <link rel="stylesheet" href="../public/css/index.css" />
+    <link rel="stylesheet" href="../public/css/header.css" />
     <link rel="stylesheet" href="../public/fonts/font.css" />
     <link rel="stylesheet" href="../public/css/footer.css">
   </head>
@@ -23,7 +23,7 @@
       </div>
     </header>
 
-    <footer>
+    <footer class="pie">
       <div class="info"></div>
       <div class="info">
         <h3>Contacto</h3>
