--- a/views/about-us.html
+++ b/views/about-us.html
@@ -19,7 +19,9 @@
       </div>
       <div class="options">
         <ul class="nav-list">
-          <li><a class="nav-options" href="#">Inicio</a></li>
+          <li>
+            <a class="nav-options" href="#">Inicio</a>
+          </li>
           <li><a class="nav-options" href="#">Acerca de nosotros</a></li>
           <li><a class="nav-options" href="#">Iniciar sesión</a></li>
           <li><a class="nav-options" href="#">Crear cuenta</a></li>
@@ -27,34 +29,50 @@
       </div>
     </header>
 
+    <!--main-->
+
     <main>
       <div class="titulo">
         <h1>Acerca de nosotros</h1>
       </div>
 
       <div class="parrafos">
-        <p class="informacion">
-          En EventGo, creemos que la organización y asistencia a eventos debe
-          ser simple, rápida y accesible para todos. Nuestra plataforma está
-          diseñada para facilitar la inscripción a eventos de manera intuitiva,
-          permitiéndote registrarte en segundos y recibir toda la información
-          que necesitas en un solo lugar.
-        </p>
+        <div class="parrafo">
+          <p class="informacion">
+            En EventGo, creemos que la organización y asistencia a eventos debe
+            ser simple, rápida y accesible para todos. Nuestra plataforma está
+            diseñada para facilitar la inscripción a eventos de manera
+            intuitiva, permitiéndote registrarte en segundos y recibir toda la
+            información que necesitas en un solo lugar.
+          </p>
+          <img
+            src="../public/img/about-us1.webp"
+            alt="Foto de evento"
+          />
+        </div>
 
-        <p class="informacion">
-          Nos enfocamos en brindar una experiencia fluida tanto para
-          organizadores como para asistentes, ofreciendo herramientas eficientes
-          para la gestión de inscripciones, confirmaciones y recordatorios.
-        </p>
+        <div class="parrafo">
+          <p class="informacion">
+            Nos enfocamos en brindar una experiencia fluida tanto para
+            organizadores como para asistentes, ofreciendo herramientas
+            eficientes para la gestión de inscripciones, confirmaciones y
+            recordatorios.
+          </p>
+          <img src="../public/img/about-us2.webp" alt="Foto del evento 2">
+        </div>
 
-        <p class="informacion">
-          Ya sea que busques participar en conferencias, talleres, conciertos o
-          cualquier otro evento, en EventGo estamos aquí para hacer que el
-          proceso sea más fácil y emocionante.
-        </p>
+        <div class="parrafo">
+          <p class="informacion">
+            Ya sea que busques participar en conferencias, talleres, conciertos
+            o cualquier otro evento, en EventGo estamos aquí para hacer que el
+            proceso sea más fácil y emocionante.
+          </p>
+          <img src="../public/img/about-us3.webp" alt="Foto de entrada">
+        </div>
       </div>
     </main>
 
+    <!--footer-->
     <footer class="pie">
       <div class="info"></div>
       <div class="info">
