actualizacion del header

--- a/views/index.html
+++ b/views/index.html
@@ -10,19 +10,17 @@
   </head>
   <body>
     <header>
-        <div class="logo">
-            <img src="https://i0.wp.com/eventgoaudio.com/wp-content/uploads/2023/12/eventgo-logoweb-600x200-inv.png?fit=600%2C200&ssl=1" alt="">
-        </div>
-      <div class="options">
-        <ul class="nav-list">
-          <li><a class="nav-options" href="#">Inicio</a></li>
-          <li><a class="nav-options" href="#">Acerca de nosotros</a></li>
-          <li><a class="nav-options" href="#">Iniciar sesión</a></li>
-          <li><a class="nav-options" href="#">Crear cuenta</a></li>
-        </ul>
-      </div>
+      <img src="../public/img/logo.webp" alt="Logo empresa">
+      <nav>
+        <a href="index.html">Inicio</a>
+        <a href="">Eventos</a>
+        <a href="log-in.html">Iniciar sesión</a>
+        <a href="register.html">Crear cuenta</a>
+        <a href="about-us.html">Sobre nosotros</a>
+      </nav>
     </header>
 
+    
     <footer class="pie">
       <div class="info"></div>
       <div class="info">
