--- a/public/css/header.css
+++ b/public/css/header.css
@@ -2,51 +2,35 @@ body {
     margin: 0;
     padding: 0;
     font-family: ChakraPetch;
+    box-sizing: border-box;
 }
 
 header {
+    background-color: rgb(0, 174, 255);
     display: flex;
-    background: #424242;
-    box-sizing: content-box;
-}
-
-.logo {
-    width: 50%;
-}
-
-img {
-    filter: drop-shadow(0 0 40px #868686);
-    width: 150px;
-    margin: 10px 20px;
-}
-
-.options {
-    width: 50%;
-    flex: 0 1 auto;
-    display: flex;
-    flex-direction: row;
-}
-
-.nav-list {
-    width: 100%;
-    display: flex;
-    list-style: none;
-}
-
-.nav-options {
-    position: relative;
-    display: flex;
-    flex: 1 1 auto;
-    padding: 0 10px;
-    margin: auto;
-    text-decoration: none;
-    color: #2196F3;
-    background: #000000;
-    color: #fff;
+    justify-content: space-around;
+    align-items: center;
     padding: 10px;
-    border-radius: 5px;
 }
 
-.nav-options:hover {
-    background: #817878;
+header img {
+    width: 12em;
+}
+
+header nav {
+    display: flex;
+}
+
+header nav a {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-size: 1.01em;
+    border-bottom: 2px solid #000000;
+    padding: 10px 10px;
+    margin-right: 15px;
+    border-radius: 10px;
+}
+
+header nav a:hover {
+    box-shadow: 0 0 10px #333;
 }
