--- a/views/index.html
+++ b/views/index.html
@@ -6,11 +6,11 @@
     <title>EventGo</title>
     <link rel="stylesheet" href="../public/css/header.css" />
     <link rel="stylesheet" href="../public/fonts/font.css" />
-    <link rel="stylesheet" href="../public/css/footer.css">
+    <link rel="stylesheet" href="../public/css/footer.css" />
   </head>
   <body>
     <header>
-      <img src="../public/img/logo.webp" alt="Logo empresa">
+      <img src="../public/img/logo.webp" alt="Logo empresa" />
       <nav>
         <a href="index.html">Inicio</a>
         <a href="">Eventos</a>
@@ -20,9 +20,7 @@
       </nav>
     </header>
 
-    
     <footer class="pie">
-      <div class="info"></div>
       <div class="info">
         <h3>Contacto</h3>
         <ul>
@@ -34,17 +32,30 @@
       <div class="info">
         <h3>Redes sociales</h3>
         <ul>
-          
-          <li><a href="https://instagram.com" class="links" target="_blank">Instagram</a></li>
-          <li><a href="https://facebook.com"  class="links" target="_blank">Facebook</a></li>
-          <li><a href="https://linkedin.com"  class="links" target="_blank">Linkedin</a></li>
+          <li>
+            <a href="https://instagram.com" class="links" target="_blank"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a href="https://facebook.com" class="links" target="_blank"
+              >Facebook</a
+            >
+          </li>
+          <li>
+            <a href="https://linkedin.com" class="links" target="_blank"
+              >Linkedin</a
+            >
+          </li>
         </ul>
       </div>
       <div class="info">
         <form action="">
           <h3>Newsletter</h3>
-          <input type="text">
-          <button>Suscribirse</button>
+          <div class="newsletter-input">
+            <input type="text" placeholder="Correo" />
+          </div>
+          <button class="newsletter-button">Suscribirse</button>
         </form>
       </div>
     </footer>
