--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -4,30 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Acerda de nosotros nosotros</title>
-    <link rel="stylesheet" href="../public/css/footer.css" />
-    <link rel="stylesheet" href="../public/css/header.css" />
-    <link rel="stylesheet" href="../public/fonts/font.css" />
-    <link rel="stylesheet" href="../public/css/about-us.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/fonts/font.css" />
+    <link rel="stylesheet" href="/css/about-us.css" />
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <img
-          src="https://i0.wp.com/eventgoaudio.com/wp-content/uploads/2023/12/eventgo-logoweb-600x200-inv.png?fit=600%2C200&ssl=1"
-          alt=""
-        />
-      </div>
-      <div class="options">
-        <ul class="nav-list">
-          <li>
-            <a class="nav-options" href="#">Inicio</a>
-          </li>
-          <li><a class="nav-options" href="#">Acerca de nosotros</a></li>
-          <li><a class="nav-options" href="#">Iniciar sesión</a></li>
-          <li><a class="nav-options" href="#">Crear cuenta</a></li>
-        </ul>
-      </div>
-    </header>
+    
+    <%- include("partials/header") %>
 
     <!--main-->
 
@@ -46,7 +30,7 @@
             información que necesitas en un solo lugar.
           </p>
           <img
-            src="../public/img/about-us1.webp"
+            src="/img/about-us1.webp"
             alt="Foto de evento"
           />
         </div>
@@ -58,7 +42,7 @@
             eficientes para la gestión de inscripciones, confirmaciones y
             recordatorios.
           </p>
-          <img src="../public/img/about-us2.webp" alt="Foto del evento 2">
+          <img src="img/about-us2.webp" alt="Foto del evento 2">
         </div>
 
         <div class="parrafo">
@@ -67,7 +51,7 @@
             o cualquier otro evento, en EventGo estamos aquí para hacer que el
             proceso sea más fácil y emocionante.
           </p>
-          <img src="../public/img/about-us3.webp" alt="Foto de entrada">
+          <img src="img/about-us3.webp" alt="Foto de entrada">
         </div>
       </div>
     </main>
