--- a/views/recovery.ejs
+++ b/views/recovery.ejs
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recuperar contraseña</title>
-    <link rel="stylesheet" href="../public/css/form.css" />
+    <link rel="stylesheet" href="/css/form.css" />
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="/fonts/font.css" />
   </head>
   <body>
+
+    <%- include("partials/header") %>
+
     <form class="form-content" action="">
         <h2 class="title">Recuperar contraseña</h2>
         <label class="form-label" for="correo">Ingrese su correo</label>
@@ -15,9 +21,11 @@
           type="email"
           placeholder="correo@correo.com"
         />
-      <a href="log-in.html" class="log">Ya tienes cuenta</a>
-      <a href="register.html" class="log">No tiene cuenta</a>
+      <a href="/iniciar-sesion" class="log">Ya tienes cuenta</a>
+      <a href="/registrarse" class="log">No tiene cuenta</a>
       <button class="form-button">Recuperar contraseña</button>
     </form>
+
+    <%- include("partials/footer") %>
   </body>
 </html>
