Se inicio el desarrollo del index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,17 +7,18 @@
     <link rel="stylesheet" href="/css/header.css" type="text/css" />
     <link rel="stylesheet" href="/css/footer.css" type="text/css" />
     <link rel="stylesheet" href="/fonts/font.css" type="text/css" />
-    
+    <link rel="stylesheet" href="/css/index.css" type="text/css" />
   </head>
   <body>
-
     <%- include("partials/header") %>
 
-    <main>
-        <h1>Bienvenido a EventGo</h1>
-        <p>Encuentra y regístrate en eventos fácilmente.</p>
-    </main>
-    
+    <div class="foto-inicio">
+      <div class="texto-inicio">
+        <h2>Evento Go</h2>
+        <p>Reserta tu asistencia en un click</p>
+      </div>
+    </div>
+
     <%- include("partials/footer") %>
   </body>
 </html>
