--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -14,7 +14,7 @@
     <%- include("partials/header.ejs") %>
     
     <form class="form-content" action="">
-        <h2 class="titule">Iniciar sesión</h2>
+        <h2 class="title">Iniciar sesión</h2>
         <label for="user-correo" class="form-label">Ingrese su correo</label>
         <input type="email" class="form-input" placeholder="correo@correo.cl" />
         <label for="user-pass" class="form-label">Ingrese su contraseña</label>
@@ -27,5 +27,6 @@
     </form>
 
     <%- include("partials/footer.ejs") %>
+    
   </body>
 </html>
