Se reposiciono el texto del index y se modifico, correcion tamaño foto del fondo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,9 +13,9 @@
     <%- include("partials/header") %>
 
     <div class="foto-inicio">
-      <div class="texto-inicio">
+      <div class="opaco">
         <h2>Evento Go</h2>
-        <p>Reserta tu asistencia en un click</p>
+        <p>¡El mundo de eventos está a un clic de distancia!</p>
       </div>
     </div>
 
