--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,22 +7,29 @@
 .foto-inicio {
     background: url("/img/fachada.webp");
     width: 100%;
-    height: 100vh;
+    height: 85vh;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
-.texto-inicio {
-    background-color: #fff;
-    width: fit-content;
-    opacity: 0.3;
-    color: #000000;
+.opaco {
+    background: rgba(0, 0, 0, 0.164);
+    width: 100%;
+    height: 100%;
+}
+
+
+h2, p {
+    color: #ffffff;
     padding: 20px;
     border-radius: 5px;
+    padding-top: 2rem;
+    text-align: center;
+}
+h2 {
+    font-size: 8em;
 }
 
-.texto-inicio h2, p {
-    font-size: 1.5em;
-}
-.texto-inicio h2 {
-    border-bottom: 1px solid #000000;
-    text-align: center;
+p {
+    font-size: 2em;
 }
