--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Acerda de nosotros nosotros</title>
+    <title>Sobre nosotros</title>
     <link rel="stylesheet" href="/css/footer.css" />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/fonts/font.css" />
@@ -17,7 +17,7 @@
 
     <main>
       <div class="titulo">
-        <h1>Acerca de nosotros</h1>
+        <h1>Sobre nosotros</h1>
       </div>
 
       <div class="parrafos">
@@ -42,7 +42,7 @@
             eficientes para la gestión de inscripciones, confirmaciones y
             recordatorios.
           </p>
-          <img src="img/about-us2.webp" alt="Foto del evento 2">
+          <img class="foto2" src="img/about-us2.webp" alt="Foto del evento 2">
         </div>
 
         <div class="parrafo">
