--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -8,7 +8,7 @@
 .pie {
     display: flex;
     background: rgb(0, 174, 255);
-    position: absolute;
+    position: relative;
     bottom: 0;
     color: white;
     width: 100%;
