En los formularios se movieron los enlaces bajo el boton, se cambio el formulario del html register y se corrio del tamaño de la foto del index

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -54,7 +54,7 @@ body {
 
 .form-button {
     background-color: #64B5F6;
-    margin-top: 20px;
+    margin: 20px;
     border-radius: 20px;
     padding: 25px 20px;
 
