--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -12,8 +12,9 @@
   <body>
 
     <%- include("partials/header.ejs") %>
-    
-    <form class="form-content" action="">
+    <div class="content">
+
+      <form class="form-content" action="">
         <h2 class="title">Iniciar sesión</h2>
         <label for="user-correo" class="form-label">Ingrese su correo</label>
         <input type="email" class="form-input" placeholder="correo@correo.cl" />
@@ -25,6 +26,7 @@
         <a href="/recuperar" class="log">Recuperar contraseña</a>
         <a href="/registrarse" class="log">Crear cuenta</a>
       </form>
+    </div>
 
     <%- include("partials/footer.ejs") %>
     
