--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,26 +13,29 @@
 
     <%- include("partials/header") %>
     
-    <form class="form-content" action="" method="post">
-        <h2 class="title">Crea una cuenta</h2>
-        <label class="form-label" for="nombre">Ingrese su nombre</label>
-        <input class="form-input" type="text" name="nombre" id="nombre" placeholder="Rocio Belen">
-        <label class="form-label" for="apellido">Ingrese su apellido</label>
-        <input class="form-input" type="text" name="apellido" id="apellido" placeholder="Moreno Cerda">
-        <label class="form-label" for="rut">Ingrese su rut</label>
-        <input class="form-input" type="number" name="rut" id="rut" placeholder="11.111.111-1">
-        <label class="form-label" for="correo">Ingrese su correo</label>
-        <input class="form-input" type="email" name="correo" id="correo" placeholder="correo@correo@gmail.com">
-        <label class="form-label" for="contra">Ingrese su contraseña</label>
-        <input class="form-input" type="password" name="contra" id="contra" placeholder="contraseña">
-        <label class="form-label" for="contra2">Confirme su contraseña</label>
-        <input class="form-input" type="password" name="contra2" id="contra2" placeholder="repetir contraseña">
-        <div class="div-button">
-            <button class="form-button">Registrarse</button>
-        </div>
-        <a class="log" href="/iniciar-sesion">Ya tienes cuenta</a>
-    </form>
-    
+    <div class="content">
+
+        <form class="form-content" action="" method="post">
+            <h2 class="title">Crea una cuenta</h2>
+            <label class="form-label" for="nombre">Ingrese su nombre</label>
+            <input class="form-input" type="text" name="nombre" id="nombre" placeholder="Rocio Belen">
+            <label class="form-label" for="apellido">Ingrese su apellido</label>
+            <input class="form-input" type="text" name="apellido" id="apellido" placeholder="Moreno Cerda">
+            <label class="form-label" for="rut">Ingrese su rut</label>
+            <input class="form-input" type="number" name="rut" id="rut" placeholder="11.111.111-1">
+            <label class="form-label" for="correo">Ingrese su correo</label>
+            <input class="form-input" type="email" name="correo" id="correo" placeholder="correo@correo@gmail.com">
+            <label class="form-label" for="contra">Ingrese su contraseña</label>
+            <input class="form-input" type="password" name="contra" id="contra" placeholder="contraseña">
+            <label class="form-label" for="contra2">Confirme su contraseña</label>
+            <input class="form-input" type="password" name="contra2" id="contra2" placeholder="repetir contraseña">
+            <div class="div-button">
+                <button class="form-button">Registrarse</button>
+            </div>
+            <a class="log" href="/iniciar-sesion">Ya tienes cuenta</a>
+        </form>
+    </div>
+        
     <%- include("partials/footer") %>
 
 </body>
