--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -29,9 +29,9 @@
     </div>
     <div class="info">
       <form action="">
-        <h3>Newsletter</h3>
+        <label for="newslatter"></label>
         <div class="newsletter-input">
-          <input type="text" placeholder="Correo" />
+          <input type="text" id="newslatter" name="newslatter" placeholder="Correo" />
         </div>
         <button class="newsletter-button">Suscribirse</button>
       </form>
