Se volvio a agregar el label de newslatter en el footer y se le agregaron los estilos

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -29,7 +29,7 @@
     </div>
     <div class="info">
       <form action="">
-        <label for="newslatter"></label>
+        <label class="newslatter-label" for="newslatter">Newsletter</label>
         <div class="newsletter-input">
           <input type="text" id="newslatter" name="newslatter" placeholder="Correo" />
         </div>
