--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -16,7 +16,7 @@
     align-items: center;
 }
 
-.pie h3 {
+.pie h3, label {
     padding: 5px;
     font-size: 1.2em;
 }
@@ -40,7 +40,7 @@
     color: #004f8f;
 }
 
-form h3 {
+.newslatter-label {
     letter-spacing: 2px;
 }
 
@@ -52,6 +52,7 @@ form h3 {
     margin-bottom: 5px;
     padding: 5px;
     border-radius: 5px;
+    margin-top: 5px;
 }
 
 .newsletter-button {
