Se corrigieron los tamaños de las fotos del about-us y se agrego un div para la seccion recovery

--- a/public/css/about-us.css
+++ b/public/css/about-us.css
@@ -29,10 +29,15 @@
 
 .parrafo img {
     width: 25em;
+    border-radius: 20px;
+}
+
+.foto1 {
+    width: 18em !important;
 }
 
 .foto2 {
-    width: 300px !important;
+    width: 18em !important;
 }
 
 .informacion {
