--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -30,6 +30,7 @@
             información que necesitas en un solo lugar.
           </p>
           <img
+            class="foto1"
             src="/img/about-us1.webp"
             alt="Foto de evento"
           />
