--- a/views/recovery.ejs
+++ b/views/recovery.ejs
@@ -20,9 +20,10 @@
         <input
         class="form-input"
         type="email"
-        placeholder="correo@correo.com"
-        />
-        <button class="form-button">Recuperar contraseña</button>
+        placeholder="correo@correo.com"/>
+        <div class="div-button">
+          <input type="submit" class="form-button" value="Recuperar">
+        </div>
         <a href="/iniciar-sesion" class="log">Ya tienes cuenta</a>
         <a href="/registrarse" class="log">No tiene cuenta</a>
       </form>
