Se agrego el body parser al servidor y se agrego el enctype al formulario

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,7 +15,7 @@
     
     <div class="content">
 
-        <form class="form-content" action="" method="post">
+        <form class="form-content" action="" enctype="multipart/form-data" method="post">
             <h2 class="title">Crea una cuenta</h2>
             <label class="form-label" for="nombre">Ingrese su nombre</label>
             <input class="form-input" type="text" name="nombre" id="nombre" placeholder="Rocio Belen">
