"Se hicieron modificaciones visuales"

--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -29,7 +29,7 @@
           <input type="submit" value="Iniciar sesión" class="form-button">
         </div>
         <a href="/recuperar" class="log">Recuperar contraseña</a>
-        <a href="/registrarse" class="log">Crear cuenta</a>
+        <a href="/registrarse" class="log">registrarse</a>
       </form>
     </div>
 
