--- a/views/recovery.ejs
+++ b/views/recovery.ejs
@@ -25,7 +25,7 @@
           <input type="submit" class="form-button" value="Recuperar">
         </div>
         <a href="/iniciar-sesion" class="log">Ya tienes cuenta</a>
-        <a href="/registrarse" class="log">No tiene cuenta</a>
+        <a href="/registrarse" class="log">registrarse</a>
       </form>
     </div>
 
