--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iniciar sesión</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="/css/form.css" type="text/css" />
     <link rel="stylesheet" href="/fonts/font.css" />
     <link rel="stylesheet" href="/css/header.css" type="text/css" />
