--- a/views/recovery.ejs
+++ b/views/recovery.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recuperar contraseña</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="/css/form.css" />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/footer.css" />
